<resources>
    <string name="_5_stars">5星好评</string>
    <string name="_ads_">广告</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad_privacy_set">广告隐私设置</string>
    <string name="all_pic_num">%1$d张图片</string>
    <string name="all_video_num">%1$d1个视频</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_bottom_title">该链接推荐使用《%1$s》解析下载，请点击下方按钮%2$s解析</string>
    <string name="app_download_app">立即下载</string>
    <string name="app_name">去水印-无水印下载</string>
    <string name="app_open_app">立即打开</string>
    <string name="app_title">@string/app_name</string>
    <string name="app_version">"应用版本
"</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，点击重试</string>
    <string name="brvah_loading">加载中...</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="can_not_open_play">无法打开Play商店，请先安装后重试！</string>
    <string name="cancel">取消</string>
    <string name="cancle_select_all">取消全选</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clean">清空</string>
    <string name="clear_mark">去除水印</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_to_restart">点击重试</string>
    <string name="clipboard_no_text">剪切板没有数据~</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">bad87506cc43463fa4dd99034c0cfe9b</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_rename">修改</string>
    <string name="contact_us">"联系我们(Email)
"</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="define_smoothprogressbar" />
    <string name="delete">删除</string>
    <string name="delete_fail">视频删除失败，请重试！</string>
    <string name="delete_nuilt_tips">删除后不可恢复，是否删除这%d个条目？</string>
    <string name="delete_tips">删除后不可恢复，是否删除该条目？</string>
    <string name="developer">"开发者
"</string>
    <string name="developer_name">Parse Studio</string>
    <string name="dialog_loading_hint">正在努力解析中…</string>
    <string name="dkplayer_error_message">出了点小问题，请稍后重试</string>
    <string name="dont_show_again">不再提示</string>
    <string name="download_all">下载全部无水印图片和视频</string>
    <string name="download_complete">下载完成！</string>
    <string name="download_desc">打开短视频app，粘贴视频链接到这里开始下载~</string>
    <string name="download_error">下载失败，请重试!</string>
    <string name="download_hint">粘贴上要下载的视频分享地址</string>
    <string name="download_image">下载无水印图片</string>
    <string name="download_image_size">下载%1$d张无水印图片</string>
    <string name="download_video">下载无水印视频</string>
    <string name="download_video_size">下载%1$d个无水印视频</string>
    <string name="email_chooser_title">请选择一个应用来发送邮件</string>
    <string name="email_desc">请将您遇到的问题通过邮件告诉我们，感谢支持！</string>
    <string name="email_error">没有找到邮件应用，请安装邮件相关客户端如Gmail后重试!</string>
    <string name="email_subject">《%1$s》意见反馈</string>
    <string name="enjoy_this_app">喜欢这个应用程序吗？</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="ex_msg_dialog_choice_confirm">Confirm button is only for multi choice lists. You must call setMultiChoiceItems first</string>
    <string name="ex_msg_dialog_view_not_set">You must call method setView before calling configureView.</string>
    <string name="exists_info">文件已存在，是否再次下载？</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="favorite_web">喜欢的网站</string>
    <string name="feedback_tips">如果在使用过程中遇到无法解析的视频链接，请反馈给开发者，开发者将在第一时间进行修复，感谢支持</string>
    <string name="gcm_defaultSenderId">768479298811</string>
    <string name="go_update">去更新</string>
    <string name="google_api_key">AIzaSyCICKFSGGH4VIyvwOl6xv_T3Ya32Z8Aghs</string>
    <string name="google_app_id">1:768479298811:android:ad00f6ca336feae25a1c5e</string>
    <string name="google_crash_reporting_api_key">AIzaSyCICKFSGGH4VIyvwOl6xv_T3Ya32Z8Aghs</string>
    <string name="google_storage_bucket">qu-yin.appspot.com</string>
    <string name="group_string">合集%1$d/%2$d</string>
    <string name="help_center">帮助中心</string>
    <string name="help_desc">查看应用常见问题</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hint">温馨提示</string>
    <string name="home">首页</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_request_cancel">请求被中断，请重试</string>
    <string name="http_response_error">服务器响应异常，请稍后再试，响应码：%1$d，响应信息：%2$s</string>
    <string name="http_response_md5_error">下载失败，文件 md5 校验失败</string>
    <string name="http_response_null_body">服务器数据返回异常，请稍后再试</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>
    <string name="http_token_error">登录失效，请重新登录</string>
    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="image_num_size">共%1$d张图片%2$s</string>
    <string name="init_str">正在初始化…</string>
    <string name="ins_appdesc">从Instagram轻松下载IG视频和照片 · 保存快拍 · 下载Reels视频。</string>
    <string name="ins_appid">com.downloader.instagram.save</string>
    <string name="ins_appname">Instagram下载器-下载IG视频、图片、故事</string>
    <string name="item_notitle">无题-</string>
    <string name="item_view_role_description">Tab</string>
    <string name="know_download">我知道了，继续下载</string>
    <string name="library_smoothprogressbar_author">Antoine Merle</string>
    <string name="library_smoothprogressbar_authorWebsite">https://github.com/castorflex</string>
    <string name="library_smoothprogressbar_isOpenSource">true</string>
    <string name="menu_like">去点赞</string>
    <string name="menu_share">分享</string>
    <string name="no_permission">应用获取权限失败，请点击此处授予存储权限！</string>
    <string name="privacy_text">隐私协议</string>
    <string name="rate_desc">如果此应用对您有帮助，请在谷歌商店上给我们5星好评。</string>
    <string name="rename">重命名</string>
    <string name="select_all">全选</string>
    <string name="set">设置</string>
    <string name="share">分享</string>
</resources>