<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:layout_width="0.0dip" android:layout_height="wrap_content" app:cardBackgroundColor="#00000000" app:cardCornerRadius="10.0dip" app:cardElevation="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/iv_expired_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/dialog_rate_bg_dy" android:adjustViewBounds="true" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <View android:background="@color/white" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="1.0px" android:layout_marginRight="1.0px" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_expired_bg" />
            <TextView android:textSize="16.0sp" android:textColor="#ff2a2a2a" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="24.0dip" android:text="@string/enjoy_this_app" android:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_expired_bg" />
            <TextView android:textSize="15.0sp" android:textColor="#ff2a2a2a" android:id="@id/tv_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="7.0dip" android:text="@string/rate_desc" android:fontFamily="sans-serif" app:layout_constraintBottom_toTopOf="@id/tv_rate" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title" />
            <TextView android:id="@id/tv_rate" android:background="@drawable/rate_drawable" android:layout_width="fill_parent" android:layout_height="43.0dip" android:layout_margin="17.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_desc" />
            <TextView android:textSize="15.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_btn" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="43.0dip" android:text="@string/_5_stars" android:drawablePadding="5.0dip" android:textAllCaps="true" android:fontFamily="sans-serif-medium" app:drawableStartCompat="@drawable/rate_left" app:layout_constraintBottom_toBottomOf="@id/tv_rate" app:layout_constraintEnd_toEndOf="@id/tv_rate" app:layout_constraintStart_toStartOf="@id/tv_rate" app:layout_constraintTop_toTopOf="@id/tv_rate" />
            <ImageView android:id="@id/iv_close" android:background="?selectableItemBackgroundBorderless" android:paddingBottom="21.0dip" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/dialog_rate_close_dy" android:scaleType="centerInside" android:paddingStart="21.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>