<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/list_item_0" android:background="@color/color_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.mcxtzhang.swipemenulib.SwipeMenuLayout android:id="@id/sl_dy_item" android:paddingBottom="1.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:foreground="?selectableItemBackground">
        <RelativeLayout android:id="@id/rl_dy_content" android:paddingTop="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:foreground="?android:selectableItemBackground">
            <CheckBox android:layout_gravity="center" android:id="@id/ft_dy_cb" android:background="@drawable/check_style" android:visibility="visible" android:clickable="false" android:layout_width="@dimen/dp_25" android:layout_height="@dimen/dp_25" android:layout_marginLeft="@dimen/dp_10" android:layout_marginTop="@dimen/dp_20" android:checked="true" android:button="@null" android:layout_alignParentLeft="true" />
            <FrameLayout android:id="@id/fl_dy_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_16" android:layout_toRightOf="@id/ft_dy_cb" android:layout_alignParentTop="true">
                <ImageView android:id="@id/iv_dy_img" android:layout_width="120.0dip" android:layout_height="80.0dip" android:scaleType="centerCrop" android:adjustViewBounds="true" />
                <ImageView android:layout_gravity="center" android:id="@id/video_dy_play" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/play" android:layout_alignParentTop="true" />
            </FrameLayout>
            <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/text" android:ellipsize="end" android:id="@id/tv_dy_title" android:tag="binding_1" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="3" android:layout_toRightOf="@id/fl_dy_img" android:layout_alignParentTop="true" android:lineSpacingExtra="3.0dip" />
            <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/text" android:gravity="center_vertical" android:id="@id/tv_dy_time" android:paddingLeft="@dimen/dp_16" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/fl_dy_img" android:layout_alignParentLeft="true" />
            <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/text" android:ellipsize="end" android:id="@id/tv_dy_size" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="12.0dip" android:layout_marginBottom="10.0dip" android:maxLines="1" android:layout_below="@id/fl_dy_img" android:layout_alignParentRight="true" />
            <View android:id="@id/view_dy_space" android:background="@color/text_hint" android:layout_width="wrap_content" android:layout_height="@dimen/dp_0_1" android:layout_marginLeft="@dimen/sp_12" android:layout_marginRight="@dimen/sp_12" android:layout_below="@id/tv_dy_time" />
        </RelativeLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_dy_share" android:background="@color/common_dark" android:layout_width="80.0dip" android:layout_height="fill_parent">
            <ImageView android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="@dimen/dp_10" android:src="@drawable/share" />
            <TextView android:textSize="13.0sp" android:textColor="@android:color/white" android:gravity="center" android:background="@color/common_dark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_dy_rename" android:background="@color/purple" android:layout_width="80.0dip" android:layout_height="fill_parent">
            <ImageView android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="@dimen/dp_10" android:src="@drawable/rename" />
            <TextView android:textSize="13.0sp" android:textColor="@android:color/white" android:gravity="center" android:background="@color/purple" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rename" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_dy_delete" android:background="@color/text_red" android:layout_width="80.0dip" android:layout_height="fill_parent">
            <ImageView android:id="@id/iv_dy_img_delete" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="@dimen/dp_10" android:src="@drawable/delete" />
            <TextView android:textSize="13.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/tv_dy_delete" android:background="@color/text_red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/delete" />
        </LinearLayout>
    </com.mcxtzhang.swipemenulib.SwipeMenuLayout>
</LinearLayout>