<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout android:id="@id/drawer_layout" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:orientation="vertical" android:background="@color/color_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.google.android.material.appbar.AppBarLayout android:theme="@style/AppTheme.AppBarOverlay" android:id="@id/appbar_dy" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar android:id="@id/toolbar_dy" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:contentInsetStartWithNavigation="0.0dip" app:popupTheme="@style/AppTheme.PopupOverlay">
                <ImageView android:layout_gravity="right" android:id="@id/iv_clear" android:background="?android:selectableItemBackgroundBorderless" android:padding="@dimen/dp_12" android:layout_width="?actionBarSize" android:layout_height="fill_parent" android:layout_marginRight="@dimen/dp_5" android:src="@drawable/icon_clear" />
                <ImageView android:layout_gravity="right" android:id="@id/iv_remove_ad" android:background="?android:selectableItemBackgroundBorderless" android:padding="@dimen/dp_12" android:visibility="invisible" android:layout_width="?actionBarSize" android:layout_height="fill_parent" android:src="@drawable/icon_removead" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/ll_tips" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center" android:id="@id/iv_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/nopermision" />
            <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/text" android:layout_gravity="center" android:id="@id/tv_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_permission" />
        </LinearLayout>
        <sing.MaterialRefreshLayout android:id="@id/refresh" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/ll_root" app:overlay="true" app:progress_colors="@array/material_colors" app:progress_size_type="normal" app:wave_height_type="normal" app:wave_show="false">
            <androidx.recyclerview.widget.RecyclerView android:layout_gravity="bottom" android:id="@id/rv_list" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        </sing.MaterialRefreshLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@id/fb_add_url" android:background="?android:selectableItemBackgroundBorderless" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dp_30" android:layout_marginBottom="@dimen/dp_43" android:src="@drawable/ic_add" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
        <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar android:id="@id/line_progress" android:visibility="gone" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginRight="@dimen/dp_30" android:layout_marginBottom="@dimen/dp_43" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" app:mlpb_arrow_height="@dimen/dp_5" app:mlpb_arrow_width="@dimen/dp_10" app:mlpb_background_color="@color/colorAccent" app:mlpb_enable_circle_background="true" app:mlpb_inner_radius="@dimen/dp_15" app:mlpb_progress_stoke_width="@dimen/dp_3" app:mlpb_progress_text_color="@color/text" app:mlpb_progress_text_size="@dimen/sp_12" app:mlpb_progress_text_visibility="visible" app:mlpb_show_arrow="true" />
        <LinearLayout android:id="@id/ll_muilt_select" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/dp_40" android:layout_alignParentBottom="true">
            <Button android:textSize="@dimen/sp_13" android:textColor="@color/white" android:id="@id/btn_select_all" android:background="@color/colorPrimary" android:layout_width="wrap_content" android:layout_height="fill_parent" android:foreground="?android:selectableItemBackground" android:text="@string/select_all" android:layout_weight="1.0" />
            <Button android:enabled="false" android:textSize="@dimen/sp_13" android:textColor="@drawable/delete_color" android:id="@id/btn_delete" android:background="@drawable/btn_delete" android:layout_width="wrap_content" android:layout_height="fill_parent" android:foreground="?android:selectableItemBackground" android:text="@string/delete" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/ll_root" android:padding="@dimen/dp_3" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/appbar_dy">
            <LinearLayout android:orientation="horizontal" android:id="@id/ll_notice" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_7" android:src="@drawable/notice_left" android:scaleType="fitXY" android:adjustViewBounds="true" />
                <TextView android:textSize="@dimen/sp_13" android:textStyle="normal" android:textColor="@color/text" android:ellipsize="marquee" android:gravity="center|left" android:layout_gravity="center" android:id="@id/tv_notice" android:focusable="true" android:focusableInTouchMode="true" android:clickable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:singleLine="true" android:layout_weight="1.0" android:marqueeRepeatLimit="marquee_forever" />
                <ImageView android:layout_gravity="center" android:id="@id/iv_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dp_2" android:src="@drawable/notice_right" android:scaleType="fitXY" android:adjustViewBounds="true" />
            </LinearLayout>
            <com.xzdyks.downloader.mob.AdFrameLayout android:id="@id/ad_view_container" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView android:layout_gravity="start" android:id="@id/navigation_view" android:background="@color/color_bg" android:layout_width="wrap_content" android:layout_height="fill_parent" app:headerLayout="@layout/dy_header_layout" app:itemBackground="?android:selectableItemBackground" app:itemTextAppearance="@style/myNavMenuTextStyle" app:menu="@menu/navigation_menu">
        <com.xzdyks.downloader.mob.AdFrameLayout android:layout_gravity="bottom" android:id="@id/drawer_ad" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>